# Machine-learning-Library-crate-for-rust

./: Cargo.toml  README.adoc  test.md
.github/workflows/: test_rust.yml
Organisation/Bases/: Requirements Analysis.adoc
src/: errors.rs  lib.rs
src/core/: mod.rs  traits.rs  validation.rs
src/core/implementations/: matrixops_impl.rs  mod.rs  statistics_impl.rs  tensorlike_impl.rs
src/core/metrics/: mod.rs
src/core/metrics/classification/: f1.rs  mod.rs  precision.rs  recall.rs
src/core/metrics/regression/: linear.rs  metrics.rs  mod.rs
src/core/models/: mod.rs
src/core/models/classification/: knn.rs  mod.rs
src/core/models/clustering/: kmeancluster.rs  mod.rs
src/core/models/regression/: knn.rs  linear.rs  mod.rs
src/core/preprocessing/: class.rs  mod.rs  norm.rs
