[package]
name = "ML_from_stratch"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
rand = "0.9.2"
thiserror = "2.0.17"
ndarray-stats = "0.6.0"
noisy_float = "0.2.0"
num-traits = "0.2.19"

[dev-dependencies]
criterion = {version = "0.7.0", features = ["html_reports"]}

[[bench]]
name = "my_benchmark"
harness = false